# waifud

./: .gitignore  Cargo.toml  LICENSE  README.md  config.dhall  config.example.dhall  flake.nix  go.mod  go.sum  main.go  main_test.go  nixos.go  shell.nix
.github/: dependabot.yml
.github/workflows/: build_nix.yml  build_snap.yml
cmd/isekaid/: dhcpmap.go  isekaid.go  key2hex.go
cmd/megamicli/: .gitignore  main.go
cmd/megamid/: .gitignore  boltbackend.go  main.go
cmd/mkvm/: main.go
cmd/waifud/: .gitignore  main.go  metadata-server.go
cmd/waifud-metadatad/: main.go
data/: README-names.md  blaseball.json  blaseball.sh  data.go  distros.dhall  names-blades.json  names-ponies-earth.json  names-ponies-pegasus.json  names-ponies-unicorn.json  names.json  pokedex-hisui.json  pokedex.sh  pokemon-hisui.json  pokemon.json
docs/isekaid/: DESIGN.md
frontend/: build.sh  deno.json  deps.ts  import_map.json  instance_create.tsx  instance_detail.tsx  instance_details.tsx
frontend/css/: build.sh  xess.css
frontend/css/src/: admin.css
frontend/waifud/: mod.ts
frontend/xeact/: jsx-runtime.js
internal/9p/client/: 9p.go  9pfs.go  README.md  constants.go  dial.go  errors.go  flags.go  modes.go  modes_test.go  ninep.go  qid.go  readR.go  reading.go  skip_test.go  stat.go  writeT.go  writing.go
internal/9p/client/cmd/9ptool/: main.go
internal/9p/client/cmd/9pweb/: main.go
internal/9p/server/: .build.yml  LICENSE  README.md  doc.go  example_server_test.go  iofs.go  nopfs.go  server.go  server_test.go  xbuild.sh
internal/9p/server/basic/: basic.go  basic_test.go
internal/9p/server/fid/: fid.go  map.go
internal/9p/server/fs/: entry.go
internal/9p/server/id/: uidgid.go
internal/9p/server/message/: attach.go  attach_test.go  auth.go  auth_test.go  clunk.go  clunk_test.go  consts.go  create.go  create_test.go  doc.go  error.go  error_test.go  flush.go  flush_test.go  message.go  message_test.go  open.go  open_test.go  read.go  read_test.go  remove.go  remove_test.go  stat.go  stat_test.go  version.go  version_test.go  walk.go  walk_test.go  write.go  write_test.go  wstat.go  wstat_test.go
internal/9p/server/qid/: consts.go  fileinfo.go  fileinfo_nostat.go  fileinfo_stat.go  qid.go  qid_test.go
internal/9p/server/stat/: consts.go  fileinfo.go  fileinfo_nostat.go  fileinfo_stat.go  reader.go  reader_test.go  stat.go
internal/ninep/: 9p.go  9pfs.go  constants.go  dial.go  errors.go  flags.go  modes.go  modes_test.go  ninep.go  qid.go  readR.go  reading.go  skip_test.go  stat.go  writeT.go  writing.go
internal/ninep/.github/workflows/: go.yml
internal/ninep/cmd/9ptool/: main.go
internal/ninep/cmd/9pweb/: main.go
internal/ninep/cmd/generate/: main.go
key2hex/: key2hex.go
lib/rotbart/: Cargo.toml
lib/rotbart/scrapers/: pokedex-hisui.sh  pokedex.sh
lib/rotbart/src/: blaseball.rs  elfs.rs  lib.rs  mlp_fim.rs  pokemon.rs  xc1.rs  xc2.rs
lib/tailscale_client/: Cargo.toml
lib/tailscale_client/src/: lib.rs
lib/ts_localapi/: Cargo.toml
lib/ts_localapi/src/: lib.rs
migrations/2021-06-18-223436_instances/: down.sql  up.sql
migrations/2021-06-18-234254_templates/: down.sql  up.sql
nix/: sources.json
scripts/: .gitignore  metadata.json  mk-nixos-image.sh  nixos-image.nix  start-redis.sh
snap/: snapcraft.yaml
src/: config.rs  lib.rs  libvirt.rs  main.rs  models.rs  namegen.rs  paseto.rs  schema.rs  tailauth.rs
src/admin/: mod.rs  xess.css
src/api/: audit.rs  cloudinit.rs  distros.rs  instances.rs  libvirt.rs  mod.rs  vendor-data
src/client/: mod.rs
src/migrate/: 20220225-session.sql  mod.rs  schema.sql
src/scrape/: amazon_linux.rs  arch.rs  mod.rs  nixos.rs  rocky_linux.rs  ubuntu.rs
static/: css  instance_create.js  instance_detail.js  js  xeact-html.js  xeact.js
templates/: base.rs.xml  base.xml  cloud-config.txtar  meta-data  network.rs.xml  network.xml  templates.go
var/: .gitignore  base.yaml  waifud-guest.privkey  waifud-guest.pubkey  waifud-host.privkey  waifud-host.pubkey  xe-base-windows.yaml  xe-base.nix  xe-base.yaml
