[package]
name = "waifud"
version = "0.1.0"
authors = [ "Xe Iaso <me@xeiaso.net>" ]
edition = "2021"
build = "src/build.rs"
repository = "https://github.com/Xe/waifud"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
anyhow = "1"
async-trait = "0.1.43"
axum = "0.5"
axum-client-ip = "0.2.0"
axum-macros = "0.2"
axum-extra = "0.3"
bb8 = "0.7"
chrono = "0.4"
clap = { version = "3", features = ["derive"] }
clap_mangen = "0.1.10"
clap_complete = "3.2.4"
dirs = "4"
edit = "0.1"
failure = "0.1"
futures = "0.3"
hex = { version = "0.4", features = [ "serde" ] }
hyper = "0.14"
hyper-tls = "0.5"
mac_address = "1"
rand = "0.8"
rusqlite_migration = "1.0"
scraper = "0.13.0"
serde_dhall = "0.11"
serde_json = "1"
serde_yaml = "0.9"
tabular = "0.2"
thiserror = "1"
tracing = "0.1"
tracing-futures = "0.2"
tracing-log = "0.1"
tracing-subscriber = "0.2"
url = "2"
yubico = "0.10"

bb8-rusqlite = { git = "https://github.com/pleshevskiy/bb8-rusqlite", branch = "bump-rusqlite" }
maud = { git = "https://github.com/Xe/maud", rev = "28b43369a3fc2bd7165e92efe410f335ffd7faad", features = ["axum-core", "axum"] }
virt = { git = "https://gitlab.com/libvirt/libvirt-rust.git", rev = "10456b6e59ec73e8ef418cf0a29a9bf33be8ded6" }

rotbart = { path = "./lib/rotbart" }
tailscale_client = { path = "./lib/tailscale_client" }
ts_localapi = { path = "./lib/ts_localapi" }

[dependencies.rusqlite]
version = "0.26"
features = [ "bundled", "uuid", "serde_json", "chrono" ]

[dependencies.serde]
version = "1"
features = [ "derive" ]

[dependencies.reqwest]
version = "0.11"
features = [ "json" ]

[dependencies.tokio]
version = "1"
features = [ "full" ]

[dependencies.tower]
version = "0.4"
features = [ "full" ]

[dependencies.tower-http]
version = "0.3"
features = [ "full" ]

[dependencies.uuid]
version = "0.8"
features = [ "serde", "v4" ]

[build-dependencies]
ructe = { version = "0.13" }

[dev-dependencies]
ructe = { version = "0.13" }

[workspace]
members = [ "lib/*" ]
