[package]
name = "waifud"
version = "0.1.0"
edition = "2021"
authors = [ "Xe Iaso <me@xeiaso.net>" ]
build = "src/build.rs"
repository = "https://github.com/Xe/waifud"
license = "mit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
anyhow = "1"
async-trait = "0.1.43"
axum = "0.6"
axum-client-ip = "0.3"
axum-macros = "0.3"
axum-extra = { version = "0.4", features = ["spa"] }
bb8 = "0.7"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
clap_mangen = "0.2"
clap_complete = "4"
dirs = "4"
edit = "0.1"
failure = "0.1"
futures = "0.3"
hex = { version = "0.4", features = [ "serde" ] }
hyper = "0.14"
hyper-tls = "0.5"
mac_address = "1"
names = "0.14"
rand = "0.8"
rusqlite_migration = "1.0"
scraper = "0.14.0"
serde_dhall = "0.12"
serde_json = "1"
serde_yaml = "0.9"
tabular = "0.2"
thiserror = "1"
tracing = "0.1"
tracing-futures = "0.2"
tracing-log = "0.1"
tracing-subscriber = "0.3"
url = "2"

bb8-rusqlite = { git = "https://github.com/pleshevskiy/bb8-rusqlite", branch = "bump-rusqlite" }
maud = { git = "https://github.com/Xe/maud", rev = "a40596c42c7603cc4610bbeddea04c4bd8b312d9", features = ["axum-core", "axum"] }
virt = { git = "https://gitlab.com/libvirt/libvirt-rust.git", rev = "10456b6e59ec73e8ef418cf0a29a9bf33be8ded6" }

rotbart = { path = "./lib/rotbart" }
tailscale_client = { path = "./lib/tailscale_client" }
ts_localapi = { path = "./lib/ts_localapi" }

[dependencies.rusqlite]
version = "0.26"
features = [ "bundled", "uuid", "serde_json", "chrono" ]

[dependencies.serde]
version = "1"
features = [ "derive" ]

[dependencies.reqwest]
version = "0.11"
features = [ "json" ]

[dependencies.tokio]
version = "1"
features = [ "full" ]

[dependencies.tower]
version = "0.4"
features = [ "full" ]

[dependencies.tower-http]
version = "0.3"
features = [ "full" ]

[dependencies.uuid]
version = "0.8"
features = [ "serde", "v4" ]

[build-dependencies]
ructe = { version = "0.15" }

[dev-dependencies]
ructe = { version = "0.15" }

[workspace]
members = [ "lib/*" ]
