[package]
name = "tailscale_client"
version = "0.1.0"
edition = "2021"
authors = [ "Xe Iaso <me@xeiaso.net>" ]
repository = "https://github.com/Xe/waifud"
license = "mit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
thiserror = "1"

[dependencies.chrono]
version = "0.4"
features = [ "serde" ]

[dependencies.serde]
version = "1"
features = [ "derive" ]

[dependencies.reqwest]
version = "0.11"
features = [ "json" ]